[package]
name = "howlongtobeat-scraper"
version = "0.1.0"
authors = ["Arnaud BEUX <nytuo.yt@gmail.com>"]
edition = "2021"
description = "Simple api for https://howlongtobeat.com"
homepage = "https://github.com/nytuo/howlongtobeat-scraper"
repository = "https://github.com/nytuo/howlongtobeat-scraper"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "README.md"]
keywords = ["howlongtobeat", "hltb"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
urlencoding = "2.1.3"
scraper = "0.22.0"
headless_chrome = { version = "1.0.20", features = [
    "fetch",
] }
serde_json = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
